--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis011.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Npc_oasis011.yml
@@ -184,7 +184,7 @@ talk0017: |
   and see... <5 Type='0'/>Tomorrow...
 talk0005: |
   <3 Type='0' Data='0b00'/><4 Type='0' Data='1800530075007200700072006900730065004d005f0030003100'/>L-little Gerudo aren't supposed to talk
-  to voe!
+  to strangers!
   
   And I'm a little Gerudo, so that means
   I have to stop talking to you now!
