--- a/Linkette Name and Pronoun Change Test/EventFlowMsg/Uotori_WhiteLineGame.yml
+++ b/Linkette Name and Pronoun Change Test/EventFlowMsg/Uotori_WhiteLineGame.yml
@@ -49,24 +49,24 @@ Talk_28: |
   <3 Type='0' Data='0100'/><4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>And you! Rebuilding houses, finding
   lost shirts...<0 Type='4'/>What can't you do?
 Talk_40: |
-  <3 Type='0' Data='0800'/>Hi, savior guy! Good morning!
+  <3 Type='0' Data='0800'/>Hi, savior lady! Good morning!
 Talk_29: |
   <3 Type='0' Data='0100'/><4 Type='0' Data='1800540061006c006b0050006f00730069007400690076006500'/>And you! Saving villages, finding
   lost items...
   
   What can't you do?
 Talk_41: |
-  <3 Type='0' Data='0800'/>Hi, savior guy!
+  <3 Type='0' Data='0800'/>Hi, savior lady!
 Talk_42: |
-  <3 Type='0' Data='0800'/>Hiii! Did you have a good day, savior guy?
+  <3 Type='0' Data='0800'/>Hiii! Did you have a good day, savior lady?
 Talk_43: |
-  <3 Type='0' Data='0800'/>Hey, you're the guy who fixed our house
+  <3 Type='0' Data='0800'/>Hey, you're the girl who fixed our house
   when it broke!
   
   Um... <5 Type='1'/>Thank youuu!
 Talk_44: |
-  <3 Type='0' Data='0800'/>Hey, you're the guy who fixed our house
-  and our village and stuff! <5 Type='0'/>The savior guy!
+  <3 Type='0' Data='0800'/>Hey, you're the lady who fixed our house
+  and our village and stuff! <5 Type='0'/>The savior lady!
   
   Um... <5 Type='1'/>Thank youuu!
 Talk_45: |
